# sapling

./: .gitignore  Makefile  cookiecutter.json
.github/: copilot-instructions.md
docs/: prompts.rst
{{cookiecutter.project_slug}}/: .gitignore  CONTRIBUTING.md  Jenkinsfile-fe  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  settings.ini  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/: .copilot-instructions.md  copilot-instructions.md
{{cookiecutter.project_slug}}/.github/daksh/prompts/: 10-create-vision-doc.md  50-create-module-epic.md  60-generate-tasks-from-epic.md
{{cookiecutter.project_slug}}/.github/general-system-prompts/: mom.mdc
{{cookiecutter.project_slug}}/.github/hooks/: pre-commit
{{cookiecutter.project_slug}}/.github/instructions/: general-coding.instructions.md
{{cookiecutter.project_slug}}/.github/prompts/: create-business-requirement.md  create-epics.mdc  create-happy-flow.md  create-happyflow.md  create-modular-epics-yaml.md  create-module-specs.md  create-vision-doc.md  create-vision.md  generate-tasks-from-epics.md
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/docs/architecture/high-level/: diagram.md
{{cookiecutter.project_slug}}/docs/architecture/low-level/: modules.md
{{cookiecutter.project_slug}}/docs/meta/: changelog.md  contributing.md
{{cookiecutter.project_slug}}/nbs/: 0-greet.ipynb  index.ipynb
{{cookiecutter.project_slug}}/requirements/: core.txt  dev.txt
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __pre_init__.py  health.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
(+17 files in other folders)
